feat: JDK8/11 multi-line support, Unirest remote HTTP, version branch pom render
- Replace Apache HttpClient with Unirest (aligned with openclaw-java-sdk)
- Java-WebSocket for center WS client; OpenCliLists for JDK 8
- Add scripts/render-branch-pom.py with Aliyun distributionManagement

Co-authored-by: Cursor <cursoragent@cursor.com>